fixed annoying scrollbar

--- a/www/trends_in_IO_style.css
+++ b/www/trends_in_IO_style.css
@@ -217,3 +217,7 @@ margin-left: 5%;
 .citation:link {
   color: black;
 }
+
+.wrapper {
+  overflow: hidden;
+}
